# polaris-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
polaris-api/: Cargo.toml  README.md  build.rs
polaris-api/specs/: auth-v2-oas3.yaml  common-oas3.yaml  issue-query-v1-oas3.yaml  triage-command-v1-oas3.yaml  triage-query-v1-oas3.yaml
polaris-api/src/: auth.rs  client.rs  common.rs  error.rs  lib.rs
polaris-cli/: Cargo.toml
polaris-cli/src/: main.rs
scripts/: install.sh  polaris
scripts/release/: package.sh
skill/: SKILL.md
