[package]
name = "polaris-api"
version = "0.4.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor-client = "0.12"
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
urlencoding = "2"
zeroize = "1"

[build-dependencies]
progenitor = "0.12"
serde_json = "1"
serde_yaml = "0.9"
rustfmt-wrapper = "0.2"
openapiv3 = "2"
