[package]
name = "polaris-cli"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "polaris"
path = "src/main.rs"

[dependencies]
polaris-api = { path = "../polaris-api" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
anyhow = "1"
toon-rs = "2.1.0"
urlencoding = "2"
keyring = { version = "3", features = ["apple-native"] }
whoami = "1"
