[package]
name = "polaris-cli"
version = "0.4.0"
edition = "2024"
description = "Command-line client for Black Duck Polaris workflows."
license = "MIT"
repository = "https://github.com/Spiris-Innovation-Tech-Dev/polaris-cli"
homepage = "https://www.blackduck.com/products/polaris-software-integrity-platform.html"

[[bin]]
name = "polaris"
path = "src/main.rs"

[dependencies]
polaris-api = { version = "0.4.1", path = "../polaris-api" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tabled = "0.17"
anyhow = "1"
toon-rs = "2.1.0"
urlencoding = "2"
keyring = { version = "3", features = ["apple-native"] }
whoami = "1"
dirs = "6"
toml = "0.8"
